--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^11.2.0",
-    "fastify": "^5.7.1"
+    "dotenv": "^17.2.3",
+    "fastify": "^5.7.1",
+    "openai": "^6.16.0"
   }
 }
