--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,19 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.7",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
+    "@types/howler": "^2.2.11",
+    "howler": "^2.2.4",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-screen-wake-lock": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
@@ -29,7 +33,15 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "file-loader": "^6.2.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.6",
     "prettier": "^3.2.5",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write ."
+    ]
   }
 }
