feat: configure monorepo

--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "routines",
-  "version": "0.2.0",
+  "name": "hackathon-bizcochos",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "start:backend": "node backend/index.js",
+    "start:frontend": "next dev frontend",
+    "build": "next build frontend",
+    "lint": "next lint frontend",
     "format": "prettier --write .",
-    "update-version": "node update-version.js",
     "prepare": "husky"
   },
   "dependencies": {
@@ -17,6 +16,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fastify/cors": "^11.2.0",
     "@hello-pangea/dnd": "^16.6.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
@@ -24,10 +24,13 @@
     "@types/howler": "^2.2.11",
     "@types/lodash.debounce": "^4.0.9",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
+    "fastify": "^5.7.1",
     "howler": "^2.2.4",
     "lodash.debounce": "^4.0.8",
     "next": "14.2.3",
     "next-intl": "^3.20.0",
+    "openai": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-screen-wake-lock": "^3.0.2"
@@ -36,6 +39,7 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
