--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,6 +2,8 @@
   "extends": ["next/core-web-vitals", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-html-link-for-pages": "off"
   }
 }
