--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fastify": "^5.7.1",
     "howler": "^2.2.4",
     "lodash.debounce": "^4.0.8",
-    "next": "14.2.3",
+    "next": "^14.2.35",
     "next-intl": "^3.20.0",
     "openai": "^6.16.0",
     "react": "^18",
@@ -43,7 +43,7 @@
     "@types/react-dom": "^18",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^14.2.35",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "file-loader": "^6.2.0",
