feat: introduce langgraph with mocked data

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@emotion/styled": "^11.11.5",
     "@fastify/cors": "^11.2.0",
     "@hello-pangea/dnd": "^16.6.0",
+    "@langchain/core": "^1.1.18",
+    "@langchain/langgraph": "^1.1.2",
+    "@langchain/openai": "^1.2.4",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
