--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fastify/cors": "^11.2.0",
+    "@google/generative-ai": "^0.24.1",
     "@hello-pangea/dnd": "^16.6.0",
     "@langchain/core": "^1.1.18",
+    "@langchain/google-genai": "^2.1.15",
     "@langchain/langgraph": "^1.1.2",
-    "@langchain/openai": "^1.2.4",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
@@ -36,7 +37,6 @@
     "lodash.debounce": "^4.0.8",
     "next": "^14.2.35",
     "next-intl": "^3.20.0",
-    "openai": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-screen-wake-lock": "^3.0.2"
