--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "^14.2.35",
     "next-intl": "^3.20.0",
+    "partial-json": "^0.1.7",
     "react": "^18",
     "react-dom": "^18",
     "react-screen-wake-lock": "^3.0.2"
