--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@fastify/cors": "^11.2.0",
     "@google/generative-ai": "^0.24.1",
     "@hello-pangea/dnd": "^16.6.0",
-    "@langchain/core": "^1.1.18",
+    "@langchain/core": "^1.1.19",
     "@langchain/google-genai": "^2.1.15",
     "@langchain/langgraph": "^1.1.2",
+    "@langchain/openai": "^1.2.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
