--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^14.2.35",
     "next-intl": "^3.20.0",
     "partial-json": "^0.1.7",
+    "posthog-js": "^1.342.1",
     "react": "^18",
     "react-dom": "^18",
     "react-screen-wake-lock": "^3.0.2"
